Implemented integration tests on user contoller

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
             <artifactId>jackson-datatype-joda</artifactId>
             <version>2.15.2</version>
         </dependency>
+        <!-- standalone jar with shaded dependencies (renames dependencies to help avoid
+            clashing with other versions of dependencies) -->
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.14.1</version>
+            <classifier>standalone</classifier>
+        </dependency>
     </dependencies>
 
     <build>
