Implemented integration tests on activity contoller and endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,23 @@
             <version>3.14.1</version>
             <classifier>standalone</classifier>
         </dependency>
+        <!-- Jackson depenency for serialising JodaTime -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+        <!-- adding Vue -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>vue</artifactId>
+            <version>3.2.47</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>axios</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
