--- a/.github/workflows/mvn-deploy.yml
+++ b/.github/workflows/mvn-deploy.yml
@@ -41,4 +41,4 @@ jobs:
        - uses: devtomio/action-railway@v1.1.4
          name: Deploy to Railway
          env:
-           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+           RAILWAY_TOKEN: "****-dfab"
